made logo stop jumping, added translucent background to logo using yellow in requirements but with translucency

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -74,9 +74,9 @@ h1 {
    animation: fadeIn ease 3s 3s forwards;
  }
 
-
  .logo {
-    background-color: #E7635D;
+    background-color: #ededc377;
+    border: 3px dotted #ededc300;
     border-radius: 50%;
     padding: 0.5rem;
     width: 10rem;
